production/ingress/biosimulations-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: ingress
  namespace: default
spec:
  tls:
    - hosts:
        - account.biosimulations.dev
        - api.biosimulations.dev
        - dispatch.biosimulations.dev
        - ontology.biosimulations.dev
        - run.biosimulations.dev
      secretName: biosimulations-ingress-certificate

  rules:
    - host: account.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: account-api
              servicePort: 80

    - host: api.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: platform-api
              servicePort: 80
    - host: dispatch.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: dispatch-api
              servicePort: 80
    - host: run.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: run-api
              servicePort: 80
    - host: ontology.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: ontology-api
              servicePort: 80
