production/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: biosimulations-dev-address
    networking.gke.io/managed-certificates: biosimulations-certificate
  name: biosimulations-ingress
  namespace: default
spec:
  rules:
    - host: api.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: biosimulations-api-service
              servicePort: 80
    - host: account.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: account-api-service
              servicePort: 80
    - host: dispatch-api.biosimulations.dev
      http:
        paths:
          - backend:
              serviceName: dispatch-api-service
              servicePort: 80
